# nnxx

./: CMakeLists.txt
examples/: CMakeLists.txt  demo.cxx  model_visualizer.cxx
include/nnxx/common/: types.hxx
include/nnxx/layer/: activation.hxx  base.hxx  dense.hxx  meta.hxx
include/nnxx/math/: activation.hxx  initialization.hxx  loss.hxx  matrix.hxx
include/nnxx/model/: dense_network.hxx  generic.hxx
